add media useCase